# rust-africa-hackathon

./: .gitignore  README.md
client/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: ActivityBar.tsx  AiChat.tsx  AiChatPopup.tsx  ApiTester.tsx  CodeEditor.tsx  CollaborationPanel.tsx  CollaborativeEditor.tsx  JoinRoomModal.tsx  NewItemModal.tsx  Sidebar.tsx  Terminal.tsx
client/app/hooks/: useAutomergeEditor.ts  useCollaboration.ts  useVoiceChat.ts  useWorkspaceSharing.ts
client/app/lib/: automerge.ts  protocol.ts  tauri.ts  utils.ts  workspace-sharing.ts
client/app/store/: index.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs
server/: .env.example  Cargo.toml  collab.db
server/data.bak.1768812247/collab.sled/: db  snap.00000000000007F4
server/data/collab.sled/: db  snap.0000000000003789
server/src/: main.rs
server/src/room/: file_tree.rs  manager.rs  mod.rs
server/src/storage/: mod.rs  sled_store.rs
server/src/sync/: document.rs  mod.rs  presence.rs  protocol.rs  server.rs
server/src/voice/: livekit.rs  mod.rs
tests/: collaboration_test.ts  test_server.sh
