[package]
name = "collab-server"
version = "0.2.0"
edition = "2021"
description = "Local-first collaborative code editor server with CRDT synchronization"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full", "sync", "time"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", features = ["sink"] }

# CRDT - Automerge for document synchronization
automerge = "0.5"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# Embedded database for binary snapshots
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"

# UUID for unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for proxying API requests
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenvy = "0.15"

# Random for colors and IDs
rand = "0.8"

# Password hashing for session tokens
sha2 = "0.10"
hex = "0.4"

# Base64 encoding
base64 = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# LiveKit for voice chat (token generation)
# livekit-api = "0.3"
jsonwebtoken = "9.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
